--- a/OpenAPIDescriptions/CustomerEndpoints.yaml
+++ b/OpenAPIDescriptions/CustomerEndpoints.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   description: API for managing customer records
 servers:
-  - url: /
+  - url: https://ag-customer-api.azurewebsites.net/
 paths:
   /customer:
     get:
