--- a/OpenAPIDescriptions/OpportunityEndpoints.yaml
+++ b/OpenAPIDescriptions/OpportunityEndpoints.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   description: API for managing opportunity records
 servers:
-  - url: /
+  - url: https://ag-customer-api.azurewebsites.net/
 paths:
   /opportunities:
     get:
