--- a/OpenAPIDescriptions/TicketEndpoints.yaml
+++ b/OpenAPIDescriptions/TicketEndpoints.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   description: API for managing ticket records
 servers:
-  - url: /
+  - url: https://ag-customer-api.azurewebsites.net/
 paths:
   /tickets:
     get:
