--- a/OpenAPIDescriptions/OpportunityEndpoints.yaml
+++ b/OpenAPIDescriptions/OpportunityEndpoints.yaml
@@ -2,10 +2,10 @@ openapi: '3.0.2'
 info:
   title: Opportunity Management API
   version: '1.0'
-  description: API for managing opportunities and related orders
+  description: API for managing business opportunities
 
 servers:
-  - url: https://ag-customer-api.azurewebsites.net/ # Replace with your actual server URL
+  - url: https://ag-customer-api.azurewebsites.net/opportunities/  # Replace with actual server URL
 
 components:
   schemas:
@@ -15,19 +15,34 @@ components:
         id:
           type: integer
           description: Unique identifier for the opportunity
+        opportunityID:
+          type: string
+          description: External opportunity identifier
+        name:
+          type: string
+          description: Name of the opportunity
+        description:
+          type: string
+          description: Detailed description of the opportunity
         account:
           type: string
-          description: Account name associated with the opportunity
+          description: Name of the account associated with the opportunity
+        parentAccount:
+          type: string
+          description: Name of the parent account
+        parentAccountId:
+          type: integer
+          description: Unique identifier of the parent account
         territory:
           type: string
-          description: Sales territory of the opportunity
+          description: Sales territory for the opportunity
         probability:
           type: number
           format: float
           description: Probability of closing the opportunity
         stageName:
           type: string
-          description: Current stage of the opportunity
+          description: Current stage of the sales opportunity
         amount:
           type: number
           format: double
@@ -37,78 +52,28 @@ components:
           description: Currency of the opportunity amount
         owner:
           type: string
-          description: Owner of the opportunity
-        dateCreated:
+          description: Name of the opportunity owner
+        region:
           type: string
-          format: date-time
-          description: Date and time the opportunity was created
-        closeDate:
-          type: string
-          format: date-time
-          description: Expected or actual close date of the opportunity
+          description: Geographic region of the opportunity
         serviceLine:
           type: string
           description: Service line associated with the opportunity
-        parentAccountId:
-          type: integer
-          description: Identifier of the parent account
-        parentAccount:
+        dateCreated:
           type: string
-          description: Name of the parent account
+          format: date-time
+          description: Date and time when the opportunity was created
+        closeDate:
+          type: string
+          format: date-time
+          description: Expected or actual date of opportunity closure
       required:
         - id
+        - name
         - account
-        - stageName
-        - amount
-
-    OrderHeader:
-  type: object
-  properties:
-    id:
-      type: integer
-      description: Unique identifier for the order
-    opportunityID:
-      type: integer
-      description: Associated opportunity identifier
-    salesDocNumber:
-      type: string
-      description: Sales document number
-    salesDocType:
-      type: string
-      description: Type of sales document
-    salesOrganisation:
-      type: string
-      description: Sales organisation
-    distributionChannel:
-      type: string
-      description: Distribution channel
-    parentCustomerID:
-      type: integer
-      description: Identifier for the parent customer
-    parentCustomer:
-      type: string
-      description: Name of the parent customer
-    localCustomerID:
-      type: string
-      description: Identifier for the local customer
-    localCustomer:
-      type: string
-      description: Name of the local customer
-    dateCreated:
-      type: string
-      format: date-time
-      description: Date the order was created
-    createdBy:
-      type: string
-      description: Name of the person who created the order
-  required:
-    - id
-    - opportunityID
-    - parentCustomerID
-    - dateCreated
 
 paths:
-  /opportunities:
+  /:
     get:
       summary: Get all opportunities
       operationId: GetAllOpportunities
@@ -116,7 +81,7 @@ paths:
         - Opportunity
       responses:
         '200':
-          description: Successful response with list of opportunities
+          description: Successful response
           content:
             application/json:
               schema:
@@ -142,12 +107,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Opportunity'
-        '400':
-          description: Invalid input
 
-  /opportunities/{id}:
+  /{id}:
     get:
-      summary: Get opportunity by ID
+      summary: Get a specific opportunity by ID
       operationId: GetOpportunityById
       tags:
         - Opportunity
@@ -159,7 +122,7 @@ paths:
             type: integer
       responses:
         '200':
-          description: Successful response with opportunity details
+          description: Successful response
           content:
             application/json:
               schema:
@@ -187,8 +150,6 @@ paths:
       responses:
         '204':
           description: Opportunity updated successfully
-        '400':
-          description: Invalid input
         '404':
           description: Opportunity not found
 
@@ -213,21 +174,21 @@ paths:
         '404':
           description: Opportunity not found
 
-  /opportunities/account/{account}:
+  /account/{accountName}:
     get:
       summary: Get opportunities by account name
       operationId: GetOpportunitiesByAccountName
       tags:
         - Opportunity
       parameters:
-        - name: account
+        - name: accountName
           in: path
           required: true
           schema:
             type: string
       responses:
         '200':
-          description: Successful response with opportunities for the account
+          description: Successful response
           content:
             application/json:
               schema:
@@ -235,49 +196,24 @@ paths:
                 items:
                   $ref: '#/components/schemas/Opportunity'
 
-  /opportunities/parentAccount/{parentAccount}:
+  /parentAccount/{parentAccountName}:
     get:
       summary: Get opportunities by parent account name
       operationId: GetOpportunitiesByParentAccountName
       tags:
         - Opportunity
       parameters:
-        - name: parentAccount
+        - name: parentAccountName
           in: path
           required: true
           schema:
             type: string
       responses:
         '200':
-          description: Successful response with opportunities for the parent account
+          description: Successful response
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/Opportunity'
-
-  /opportunities/{id}/orders:
-    get:
-      summary: Get orders associated with an opportunity
-      operationId: GetOrdersInOpportunityById
-      tags:
-        - Opportunity
-        - OrderHeader
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Successful response with orders for the opportunity
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/OrderHeader'
-        '404':
-          description: Opportunity not found or no orders exist
